F022: CodebaseKnowledge query helpers + entry point scoring
- StructuralGraph: getEntryPoints(), getAllKnownMethods(), getEntryPointPriority()
- New domain records: EntryPoint, EntryPointType, MethodIdentifier
- CodebaseKnowledge/SemanticEnrichment: delegation methods for entry points + test insights
- Phase3Orchestrator: deserialize all 6 entry point types into StructuralGraph
- Phase2Orchestrator: populate Task.pairedTestPath from PairedExecutionResolver
- HelloCommand: @ConditionalOnBean(AgentPlatform.class) to fix Spring context test failures
- Docs: PLAN2, PLAN-Phase3-steps, PLAN-Phase3, PRD, SDLC artifacts for F027/F028